# flymock

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  README.rst  flymock.py  requirements.txt  setup.cfg  setup.py  tox.ini
flymock/: __init__.py
tests/: fly_mock_test.py  integrate_test.py  loader_test.py
tests/__mock__/: demo.json  example.com.yaml  github.com.yaml
