[metadata]
name = flymock
author = Gray King
author-email = grayking.w@gmail.com
summary = "Easy to mock external HTTP request in Tornado."
description-file = README.rst

classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: Chinese (Simplified)
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries
    Topic :: Utilities
[files]
packages = flymock

[aliases]
test=pytest

[tool:pytest]
addopts = --cov
python_files = tests/*
